fixed folder contents vertically overflowing file explorer

--- a/src/components/apps/file-explorer/FileExplorer.css
+++ b/src/components/apps/file-explorer/FileExplorer.css
@@ -1,8 +1,18 @@
 .navigation-pane-and-folder-contents-container {
-  width: 100%;
+  flex-grow: 1;
   display: flex;
+  min-height: 0px;
+  height: 100%;
 }
 
 .item-count {
   padding-left: 0.5rem;
+}
+
+.file-explorer-window-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 0px;
+  height: 100%;
 }
