--- a/src/components/apps/file-explorer/navbar/FileExplorerNavbar.css
+++ b/src/components/apps/file-explorer/navbar/FileExplorerNavbar.css
@@ -1,6 +1,6 @@
 .fx-navbar {
-  width: 100%;
-  height: 1.25rem;
+  flex-basis: 1.25rem;
+  min-height: 1.25rem;
   display: flex;
   font-size: 0.7rem;
   color: white;
