--- a/src/components/apps/file-explorer/navigation-bar/FileExplorerNavigationBar.css
+++ b/src/components/apps/file-explorer/navigation-bar/FileExplorerNavigationBar.css
@@ -1,6 +1,6 @@
 .fx-navigation-bar {
-  flex-basis: 100%;
-  height: 2.25rem;
+  flex-basis: 2.25rem;
+  min-height: 2.25rem;
   color: white;
   background-color: #191919;
 }
